# resume_creator

./: .dockerignore  .gitignore  Dockerfile  README.md  _1_get_accomplishments_and_personal_details.py  _1_get_all_accomplishments.py  _2_create_company_summary.py  _3_extract_job_description_text.py  _4_extract_job_industry.py  _5_generate_resume_text.py  _6_assemble_new_resume.py  api.py  clean_temp_files.py  docker-compose.yml  env.example  local_test_resume.docx  pyproject.toml  requirements.txt  run_all.py  run_app.sh  run_docker.sh  test_api.sh  test_caching_simple.py
docker/: Dockerfile.backend  docker-build-fast.sh  docker-compose.dev.yml  docker-compose.yml  docker-run.sh
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
inputs/: consts.py
requirements/: requirements.txt
scripts/: run_all.py  run_dev.sh  run_fullstack.sh  run_tests.sh  test_api.sh
src/api/: api.py
src/core/: accomplishments.py  assemble.py  company_summary.py  industry.py  job_description.py  resume_text.py
src/data/: consts.py
src/utils/: chat_utils.py  docx_writer.py  general_utils.py  langchain_utils.py  npl_utils.py  open_ai.py  resume_details.py
tests/: README.md  test_basic_resume_generation.py  test_caching_simple.py
tests/data/: sample_accomplishments.txt  sample_resume.docx
tests/scripts/: generate_test_files.py  run_all_tests.py  test_basic_resume_generation.py  test_chat_interface.py  (+2 more)
utils/: chat_utils.py  docx_writer.py  general_utils.py  langchain_utils.py  npl_utils.py  open_ai.py  resume_details.py
(+1 files in other folders)
